--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "install": "^0.13.0",
+    "npm": "^8.13.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-pure-carousel": "^1.1.0",
